packages/runners/swc-plugin-runners/tests/errors/misplaced-directive-function/input.js
export async function myRunner(ctx) {
  const x = 1;
  "use runner";
  return { name: "test", status: "pass" };
}

